--- a/Links Provas Google/index.html
+++ b/Links Provas Google/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
 	<section class="autenticacao" id="autenticacao">
-
+		<span class="campoAutenticacao">Senha:<input type="password" id="senha" value=""></section>
+		<input type="button" class="campoAutenticacao" value="CONFIRMAR" onclick="confirmar()" id="confirmar">
 	</section>
 	<section class="links" id="links">
 		<h1>Links Provas Google</h1>
-		<a href="" id="COB1084">COB1084 - Noções de Atuária</a>
+		<span class="abrirLink" id="COB1084">COB1084 - Noções de Atuária</span>
 	</section>
 	<section class="prova" id="prova">
-		<span>oi</span>
 		<iframe src="" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" class="exibirProva" id="exibirProva"></iframe>
 	</section>
 	
