--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 					<td class="abrirLink" id="GCSA1059">Análise das Demonstrações Contábeis: GCSA1059</td>
 				</tr>
 				<tr>
+					<td class="abrirLink" id="GADM1041">Administração da Produção I: GADM1041</td>
+				</tr>
+				<tr>
 					<td class="abrirLink" id="GCOB1044">Análise de Cenários Econômicos: GCOB1044</td>
 				</tr>
 				<tr>
