--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				</tr>
 				<tr>
 					<td class="abrirLink" id="GADM1074">Análise e Comportamento de Mercado: GADM1074</td>
-				</tr>
+				</tr><tr><td class="abrirLink" id="GADM1041">Administração da Produção I: GADM1041</td></tr>
 				<tr>
 					<td class="abrirLink" id="GEAD0100">Cálculo II: GEAD0100</td>
 				</tr>
