--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 				</tr>
 				<tr>
 					<td class="abrirLink" id="GEAD0166">Comida como Patrimônio: GEAD0166</td>
-				</tr>
+				</tr><tr><td class="abrirLink" id="GADS1045">Ferramentas de Desenvolvimento Web: GADS1045</td></tr>
 				<tr>
 					<td class="abrirLink" id="GINF1092">Interação Homem-Computador: GINF1092</td>
 				</tr>
