--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 <tr><td class="abrirLink" id="GCSA1061">Engenharia de Processos: GCSA1061</td></tr>
 <tr><td class="abrirLink" id="GPRO1045">Engenharia do Produto: GPRO1045</td></tr>
 <tr><td class="abrirLink" id="GEAD0205">Engenharia Econômica: GEAD0205</td></tr>
+<tr><td class="abrirLink" id="GADS1038">Estatística: GADS1038</td></tr>
 <tr><td class="abrirLink" id="GEAD0094">Estrutura Física e Equipamento: GEAD0094</td></tr>
 <tr><td class="abrirLink" id="GEAD0180">Estrutura Física, Equipamento e Planejamento de Cardápio: GEAD0180</td></tr>
 <tr><td class="abrirLink" id="GDLL0003">Estudos Históricos e Literários: GDLL0003</td></tr>
