--- a/index.html
+++ b/index.html
@@ -60,16 +60,22 @@
 <tr><td class="abrirLink" id="GDLL0002">Análise de textos: GDLL0002</td></tr>
 <tr><td class="abrirLink" id="GADM1074">Análise e Comportamento de Mercado: GADM1074</td></tr>
 <tr><td class="abrirLink" id="GDBI0003">Anatomia do Sistema Locomotor: GDBI0003</td></tr>
+<tr><td class="abrirLink" id="GDBI0006">Anatomia dos Sistemas: GDBI0006</td></tr>
 <tr><td class="abrirLink" id="GEAD0069">Aprendizagem e Desenvolvimento Motor: GEAD0069</td></tr>
+<tr><td class="abrirLink" id="GPED1058">Aprofundamento em Estudos Sócio-Filosóficos da Educação: GPED1058</td></tr>
 <tr><td class="abrirLink" id="GPED1047">Aprofundamento no Estudo da Didática: GPED1047</td></tr>
+<tr><td class="abrirLink" id="GEAD0045">Aromaterapia: GEAD0045</td></tr>
+<tr><td class="abrirLink" id="GADS1049">Arquitetura de Computadores: GADS1049</td></tr>
 <tr><td class="abrirLink" id="GEAD0001">Biofísica: GEAD0001</td></tr>
 <tr><td class="abrirLink" id="GEAD0182">Biogeografia e Geoprocessamento: GEAD0182</td></tr>
+<tr><td class="abrirLink" id="GEAD0128">Branding: GEAD0128</td></tr>
 <tr><td class="abrirLink" id="GDAI0002">Calculo Básico: GDAI0002</td></tr>
 <tr><td class="abrirLink" id="GDAI0005">Cálculo Diferencial e Integral: GDAI0005</td></tr>
 <tr><td class="abrirLink" id="GEAD0100">Cálculo II: GEAD0100</td></tr>
 <tr><td class="abrirLink" id="GINS1003">Cidadania: GINS1003</td></tr>
 <tr><td class="abrirLink" id="GEAD0107">Cinesiologia: GEAD0107</td></tr>
 <tr><td class="abrirLink" id="GEAD0166">Comida como Patrimônio: GEAD0166</td></tr>
+<tr><td class="abrirLink" id="GDLO0001">Compras: GDLO0001</td></tr>
 <tr><td class="abrirLink" id="GEAD0087">Confeitaria Internacional: GEAD0087</td></tr>
 <tr><td class="abrirLink" id="GCOB1081">Contabilidade Aplicada ao Setor Público: GCOB1081</td></tr>
 <tr><td class="abrirLink" id="GCOB1074">Contabilidade Avançada: GCOB1074</td></tr>
@@ -103,6 +109,7 @@
 <tr><td class="abrirLink" id="GCSA1061">Engenharia de Processos: GCSA1061</td></tr>
 <tr><td class="abrirLink" id="GPRO1045">Engenharia do Produto: GPRO1045</td></tr>
 <tr><td class="abrirLink" id="GEAD0205">Engenharia Econômica: GEAD0205</td></tr>
+<tr><td class="abrirLink" id="GDEP0002">Estatística e Probabilidade: GDEP0002</td></tr>
 <tr><td class="abrirLink" id="GADS1038">Estatística: GADS1038</td></tr>
 <tr><td class="abrirLink" id="GEAD0094">Estrutura Física e Equipamento: GEAD0094</td></tr>
 <tr><td class="abrirLink" id="GEAD0180">Estrutura Física, Equipamento e Planejamento de Cardápio: GEAD0180</td></tr>
@@ -145,6 +152,7 @@
 <tr><td class="abrirLink" id="GADM1075">Gestão da Inovação: GADM1075</td></tr>
 <tr><td class="abrirLink" id="GGHO0004">Gestão de Serviços em Saúde: GGHO0004</td></tr>
 <tr><td class="abrirLink" id="GEAD0116">Gestão do Conhecimento: GEAD0116</td></tr>
+<tr><td class="abrirLink" id="GGRH1049">Gestão Estratégica de Pessoas: GGRH1049</td></tr>
 <tr><td class="abrirLink" id="GADM1068">Gestão Mercadológica I: GADM1068</td></tr>
 <tr><td class="abrirLink" id="GGRH1046">Gestão por Competência: GGRH1046</td></tr>
 <tr><td class="abrirLink" id="GPED1118">História da Educação Brasileira: GPED1118</td></tr>
@@ -287,6 +295,7 @@
 <tr><td class="abrirLink" id="GEAD0203">Variáveis Complexas: GEAD0203</td></tr>
 <tr><td class="abrirLink" id="GDBI0013">Zoologia dos Deuterostomados: GDBI0013</td></tr>
 <tr><td class="abrirLink" id="GDBI0010">Zoologia dos Protostomados: GDBI0010</td></tr>
+
 			</tbody>
 		</table>
 	</section>
