--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
 <tr><td class="abrirLink" id="GEAD0192">Topografia e Terraplenagem: GEAD0192</td></tr>
 <tr><td class="abrirLink" id="GDLL0005">Variação em Língua Portuguesa: GDLL0005</td></tr>
 <tr><td class="abrirLink" id="GEAD0203">Variáveis Complexas: GEAD0203</td></tr>
+<tr><td class="abrirLink" id="GADM1096">Vendas e Negociação: GADM1096</td></tr>
 <tr><td class="abrirLink" id="GDBI0013">Zoologia dos Deuterostomados: GDBI0013</td></tr>
 <tr><td class="abrirLink" id="GDBI0010">Zoologia dos Protostomados: GDBI0010</td></tr>
 
