--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 <tr><td class="abrirLink" id="GEAD0171">Direito Penal III: GEAD0171</td></tr>
 <tr><td class="abrirLink" id="GEAD0173">Direito Processual Civil I: GEAD0173</td></tr>
 <tr><td class="abrirLink" id="GEAD0093">Ecogastronomia: GEAD0093</td></tr>
+				<tr><td class="abrirLink" id="GADM1039">Economia Aplicada à Gestão: GADM1039</td></tr>
 <tr><td class="abrirLink" id="GDBI0015">Educação Ambiental: GDBI0015</td></tr>
 <tr><td class="abrirLink" id="GDEF0004">Educação Física Inclusiva: GDEF0004</td></tr>
 <tr><td class="abrirLink" id="GEAD0202">Eletricidade Básica: GEAD0202</td></tr>
