--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <tr><td class="abrirLink" id="GPED1047">Aprofundamento no Estudo da Didática: GPED1047</td></tr>
 <tr><td class="abrirLink" id="GEAD0045">Aromaterapia: GEAD0045</td></tr>
 <tr><td class="abrirLink" id="GADS1049">Arquitetura de Computadores: GADS1049</td></tr>
+<tr><td class="abrirLink" id="GMKT1050">Atendimento, Vendas e CRM: GMKT1050</td></tr>
 <tr><td class="abrirLink" id="GEAD0001">Biofísica: GEAD0001</td></tr>
 <tr><td class="abrirLink" id="GEAD0182">Biogeografia e Geoprocessamento: GEAD0182</td></tr>
 <tr><td class="abrirLink" id="GEAD0128">Branding: GEAD0128</td></tr>
@@ -101,7 +102,7 @@
 <tr><td class="abrirLink" id="GEAD0171">Direito Penal III: GEAD0171</td></tr>
 <tr><td class="abrirLink" id="GEAD0173">Direito Processual Civil I: GEAD0173</td></tr>
 <tr><td class="abrirLink" id="GEAD0093">Ecogastronomia: GEAD0093</td></tr>
-				<tr><td class="abrirLink" id="GADM1039">Economia Aplicada à Gestão: GADM1039</td></tr>
+<tr><td class="abrirLink" id="GADM1039">Economia Aplicada à Gestão: GADM1039</td></tr>
 <tr><td class="abrirLink" id="GDBI0015">Educação Ambiental: GDBI0015</td></tr>
 <tr><td class="abrirLink" id="GDEF0004">Educação Física Inclusiva: GDEF0004</td></tr>
 <tr><td class="abrirLink" id="GEAD0202">Eletricidade Básica: GEAD0202</td></tr>
