--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <tr><td class="abrirLink" id="GEAD0087">Confeitaria Internacional: GEAD0087</td></tr>
 <tr><td class="abrirLink" id="GCOB1081">Contabilidade Aplicada ao Setor Público: GCOB1081</td></tr>
 <tr><td class="abrirLink" id="GCOB1074">Contabilidade Avançada: GCOB1074</td></tr>
+				<tr><td class="abrirLink" id="GCOB1035">Contabilidade Básica: GCOB1035</td></tr>
 <tr><td class="abrirLink" id="GCOB1072">Contabilidade Societária: GCOB1072</td></tr>
 <tr><td class="abrirLink" id="GCOB1075">Contabilidade Tributária: GCOB1075</td></tr>
 <tr><td class="abrirLink" id="GCOB1082">Contabilidade Voltada ao Terceiro Setor: GCOB1082</td></tr>
