--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 <tr><td class="abrirLink" id="GCSA1081">Métodos Quantitativos: GCSA1081</td></tr>
 <tr><td class="abrirLink" id="GEAD0113">Microbiologia dos Alimentos: GEAD0113</td></tr>
 <tr><td class="abrirLink" id="GEAD0197">Modelagem de Informações da Construção: GEAD0197</td></tr>
+				<tr><td class="abrirLink" id="GADS1044">Modelagem e Desenvolvimento de Banco de Dados: GADS1044</td></tr>
 <tr><td class="abrirLink" id="GDEF0015">Morfofisiologia: GDEF0015</td></tr>
 <tr><td class="abrirLink" id="GPED1048">Neurociência e Aprendizagem: GPED1048</td></tr>
 <tr><td class="abrirLink" id="GCOB1084">Noções de Atuária: GCOB1084</td></tr>
