--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 <tr><td class="abrirLink" id="GEAD0094">Estrutura Física e Equipamento: GEAD0094</td></tr>
 <tr><td class="abrirLink" id="GEAD0180">Estrutura Física, Equipamento e Planejamento de Cardápio: GEAD0180</td></tr>
 <tr><td class="abrirLink" id="GDLL0003">Estudos Históricos e Literários: GDLL0003</td></tr>
+<tr><td class="abrirLink" id="GINS1004">Estudos Socioantropológicos: GINS1004</td></tr>
+<tr><td class="abrirLink" id="GINS1031">Estudos Socioantropológicos: GINS1031</td></tr>
 <tr><td class="abrirLink" id="GEAD0163">Ética, Legislação e Propriedade Intelectual: GEAD0163</td></tr>
 <tr><td class="abrirLink" id="GEAD0183">Eventos e Entretenimento: GEAD0183</td></tr>
 <tr><td class="abrirLink" id="GEAD0111">Eventos Gastronômicos e Serviço de Salão: GEAD0111</td></tr>
