--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 			</thead>
 			<tbody class="descricaoLinks">
 				
-				<tr><td class="abrirLink" id="GADM1041">Administração da Produção I: GADM1041</td></tr>
 <tr><td class="abrirLink" id="GADM1069">Administração da Produção: GADM1069</td></tr>
+<tr><td class="abrirLink" id="GADM1041">Administração da Produção I: GADM1041</td></tr>
 <tr><td class="abrirLink" id="GADS1053">Administração de Banco de Dados: GADS1053</td></tr>
 <tr><td class="abrirLink" id="GSER1105">Administração e Planejamento em Serviço Social: GSER1105</td></tr>
 <tr><td class="abrirLink" id="GENG1130">Álgebra Linear e Cálculo Vetorial: GENG1130</td></tr>
@@ -133,6 +133,7 @@
 <tr><td class="abrirLink" id="GEAD0205">Engenharia Econômica: GEAD0205</td></tr>
 <tr><td class="abrirLink" id="GDEP0002">Estatística e Probabilidade: GDEP0002</td></tr>
 <tr><td class="abrirLink" id="GADS1038">Estatística: GADS1038</td></tr>
+<tr><td class="abrirLink" id="GADM1078">Estratégia de Vendas e Serviços: GADM1078</td></tr>
 <tr><td class="abrirLink" id="GEAD0094">Estrutura Física e Equipamento: GEAD0094</td></tr>
 <tr><td class="abrirLink" id="GEAD0180">Estrutura Física, Equipamento e Planejamento de Cardápio: GEAD0180</td></tr>
 <tr><td class="abrirLink" id="GDLL0003">Estudos Históricos e Literários: GDLL0003</td></tr>
@@ -179,6 +180,7 @@
 <tr><td class="abrirLink" id="GGHO0004">Gestão de Serviços em Saúde: GGHO0004</td></tr>
 <tr><td class="abrirLink" id="GEAD0116">Gestão do Conhecimento: GEAD0116</td></tr>
 <tr><td class="abrirLink" id="GGRH1049">Gestão Estratégica de Pessoas: GGRH1049</td></tr>
+<tr><td class="abrirLink" id="GCSA1071">Gestão Financeira: GCSA1071</td></tr>
 <tr><td class="abrirLink" id="GADM1068">Gestão Mercadológica I: GADM1068</td></tr>
 <tr><td class="abrirLink" id="GGRH1046">Gestão por Competência: GGRH1046</td></tr>
 <tr><td class="abrirLink" id="GPED1118">História da Educação Brasileira: GPED1118</td></tr>
@@ -239,10 +241,13 @@
 <tr><td class="abrirLink" id="GPED1181">Metodologia e Prática de Alfabetização e Letramento: GPED1181</td></tr>
 <tr><td class="abrirLink" id="GEST1005">Métodos Quantitativos Estatísticos: GEST1005</td></tr>
 <tr><td class="abrirLink" id="GCSA1081">Métodos Quantitativos: GCSA1081</td></tr>
+<tr><td class="abrirLink" id="GCSA1060">Micro e Macro Economia: GCSA1060</td></tr>
 <tr><td class="abrirLink" id="GEAD0113">Microbiologia dos Alimentos: GEAD0113</td></tr>
 <tr><td class="abrirLink" id="GEAD0197">Modelagem de Informações da Construção: GEAD0197</td></tr>
 <tr><td class="abrirLink" id="GADS1060">Modelagem de Sistemas: GADS1060</td></tr>
 <tr><td class="abrirLink" id="GADS1044">Modelagem e Desenvolvimento de Banco de Dados: GADS1044</td></tr>
+<tr><td class="abrirLink" id="GADM1038">Modelagem Organizacional: GADM1038</td></tr>
+<tr><td class="abrirLink" id="GCSA1072">Modelagem Organizacional: GCSA1072</td></tr>
 <tr><td class="abrirLink" id="GDEF0015">Morfofisiologia: GDEF0015</td></tr>
 <tr><td class="abrirLink" id="GPED1048">Neurociência e Aprendizagem: GPED1048</td></tr>
 <tr><td class="abrirLink" id="GCOB1084">Noções de Atuária: GCOB1084</td></tr>
@@ -321,6 +326,7 @@
 <tr><td class="abrirLink" id="GCSA1055">Teorias da Administração: GCSA1055</td></tr>
 <tr><td class="abrirLink" id="GEAD0106">Terapias em SPAS: GEAD0106</td></tr>
 <tr><td class="abrirLink" id="GCOB1076">Tópicos Avançados em Contabilidade: GCOB1076</td></tr>
+<tr><td class="abrirLink" id="GADM1083">Tópicos Especiais em Administração: GADM1083</td></tr>
 <tr><td class="abrirLink" id="GCOB1080">Tópicos Especiais em Ciências Contábeis: GCOB1080</td></tr>
 <tr><td class="abrirLink" id="GCSA1045">Tópicos Especiais em Gestão Pública: GCSA1045</td></tr>
 <tr><td class="abrirLink" id="GEAD0158">Tópicos Especiais em Jornalismo I: GEAD0158</td></tr>
