--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 <tr><td class="abrirLink" id="GADM1071">Plano de Negócios: GADM1071</td></tr>
 <tr><td class="abrirLink" id="GLIC1034">Políticas Públicas Educacionais: GLIC1034</td></tr>
 <tr><td class="abrirLink" id="GHBD0037">Prática de Projeto de Arquitetura I-Residencial Unifamiliar: GHBD0037</td></tr>
+<tr><td class="abrirLink" id="GCOB1097">Prática em Elaboração e Análise das Demonstrações Contábeis: GCOB1097</td></tr>
 <tr><td class="abrirLink" id="GCOB1079">Prática em Gestão e Planejamento Tributário: GCOB1079</td></tr>
 <tr><td class="abrirLink" id="GCOB1089">Práticas Contábeis: GCOB1089</td></tr>
 <tr><td class="abrirLink" id="GDLO0003">Produção: GDLO0003</td></tr>
