--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <tr><td class="abrirLink" id="GDIR1182">Contratos na Atividade Civil e Empresarial: GDIR1182</td></tr>
 <tr><td class="abrirLink" id="GCOB1040">Controladoria: GCOB1040</td></tr>
 <tr><td class="abrirLink" id="GCSA1062">Controladoria: GCSA1062</td></tr>
+<tr><td class="abrirLink" id="GCSA1041">Controladoria Pública: GCSA1041</td></tr>
 <tr><td class="abrirLink" id="GADM1101">Cultura e Clima Organizacional: GADM1101</td></tr>
 <tr><td class="abrirLink" id="GLIC1018">Didática: GLIC1018</td></tr>
 <tr><td class="abrirLink" id="GADM1039">Economia Aplicada à Gestão: GADM1039</td></tr>
